# papercli

./: .env.example  .gitignore  HF_README.md  Justfile  README.md  pyproject.toml  requirements.txt
papercli/: __init__.py  base.py  cli.py  crawl.py  db.py  download.py  export.py  logging.py  models.py  pdf.py  publish.py  sync.py  venue_years.py
papercli/crawlers/: __init__.py  aaai.py  acl.py  cvf.py  ecva.py  ijcai.py  isca.py  jmlr.py  openreview.py
scripts/: download.py  publish.py
tests/: test_cli_download.py  test_cli_sync.py  test_crawlers.py  test_openreview.py  test_parsers.py
tests/fixtures/: cvf.html  cvf_sibling_walk.html  ijcai.html  jmlr.html
