[project]
name = "papercli"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "acl-anthology>=1.1.0",
    "huggingface-hub>=1.16.1",
    "openreview-py>=2.2.2",
    "pyarrow>=24.0.0",
    "pysocks>=1.7.1",
    "requests>=2.34.2",
    "rich>=15.0.0",
    "selectolax>=0.4.10",
    "typer>=0.26.7",
]

[project.scripts]
papers = "papercli.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.16",
    "ty>=0.0.44",
]
